--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -1,7 +1,7 @@
 # image will be published to ghcr.io/<user>/<name>
-name: template
+name: bionite
 # description will be included in the image's metadata
-description: This is my personal OS image.
+description: Personal Kinoite image
 
 # the base image to build on top of (FROM) and the version tag to use
 base-image: quay.io/fedora-ostree-desktops/kinoite
