--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -1,5 +1,5 @@
 # image will be published to ghcr.io/<user>/<name>
-name: bionite
+name: binoite
 # description will be included in the image's metadata
 description: Personal Kinoite image
 
