--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -27,6 +27,7 @@ modules:
       # "firefox" is the main package, "firefox-langpacks" is a dependency
        - firefox
        - firefox-langpacks # also remove firefox dependency (not required for all packages, this is a special case)
+       - plasma-discover # until discover constantly updating is fixed
 
   - type: default-flatpaks
     notify: true # Send notification after install/uninstall is finished (true/false)
