added kvantum, waydroid, neovim

--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -20,6 +20,9 @@ modules:
     repos:
       # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
     install:
+        - neovim
+        - waydroid
+        - kvantum
       # - micro
       # - starship
     remove:
