--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -21,8 +21,8 @@ modules:
       # - https://copr.fedorainfracloud.org/coprs/atim/starship/repo/fedora-%OS_VERSION%/atim-starship-fedora-%OS_VERSION%.repo
     install:
         - neovim
-      # - micro
-      # - starship
+        - steam-devices
+        - kvantum
     remove:
       # example: removing firefox (in favor of the flatpak)
       # "firefox" is the main package, "firefox-langpacks" is a dependency
