--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -15,6 +15,13 @@ modules:
       - usr: /usr # copies config/files/usr into your image's /usr.
                   # put configuration files you want in /etc/ on a booted system 
                   # in /usr/etc/ in the image. read more in files module reference.
+                  
+  - type: containerfile
+    snippets:
+      - RUN rpm-ostree install https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-$(rpm -E %fedora).noarch.rpm \ # rpm-fusion for newest 
+            rpm-ostree install https://mirrors.rpmfusion.org/free/fedora/rpmfusion-nonfree-release-$(rpm -E %fedora).noarch.rpm \
+            rpm-ostree install https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-39.noarch.rpm \
+            rpm-ostree install https://mirrors.rpmfusion.org/free/fedora/rpmfusion-nonfree-release-39.noarch.rpm \
 
   - type: rpm-ostree
     repos:
