--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -18,10 +18,10 @@ modules:
                   
   - type: containerfile
     snippets:
-      - RUN rpm-ostree install https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-$(rpm -E %fedora).noarch.rpm \ # rpm-fusion for newest 
-            rpm-ostree install https://mirrors.rpmfusion.org/free/fedora/rpmfusion-nonfree-release-$(rpm -E %fedora).noarch.rpm \
-            rpm-ostree install https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-39.noarch.rpm \
-            rpm-ostree install https://mirrors.rpmfusion.org/free/fedora/rpmfusion-nonfree-release-39.noarch.rpm \
+      - RUN rpm-ostree install https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-$(rpm -E %fedora).noarch.rpm  # rpm-fusion for newest 
+      - RUN rpm-ostree install https://mirrors.rpmfusion.org/free/fedora/rpmfusion-nonfree-release-$(rpm -E %fedora).noarch.rpm 
+      - RUN rpm-ostree install https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-39.noarch.rpm #rpm-fusion for prior version
+      - RUN rpm-ostree install https://mirrors.rpmfusion.org/free/fedora/rpmfusion-nonfree-release-39.noarch.rpm 
 
   - type: rpm-ostree
     repos:
