--- a/config/recipe.yml
+++ b/config/recipe.yml
@@ -18,8 +18,8 @@ modules:
                   
   - type: rpm-ostree
     install:
-        - https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-${image-version}.noarch.rpm #rpm-fusion for prior version
-        - https://mirrors.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-${image-version}.noarch.rpm 
+        - https://mirrors.rpmfusion.org/free/fedora/rpmfusion-free-release-$(rpm -E %fedora).noarch.rpm #rpm-fusion for prior version
+        - https://mirrors.rpmfusion.org/nonfree/fedora/rpmfusion-nonfree-release-$(rpm -E %fedora).noarch.rpm 
 
   - type: rpm-ostree
     repos:
